# dalaware

./: CONTEXT_README.md  Cargo.toml  Cargo.toml.bak  FINAL_STATUS.md  Makefile  PROJECT_STATUS.md  README.md
.claude/commands/: review.md  story.md  test.md
ai/: architecture.md  code-guidelines.md  guidelines.md  mcp-guide.md  review-guidelines.md  testing-guidelines.md  user-story-template.md
application/: Cargo.toml
application/src/: lib.rs  mnist_loader.rs  trainer.rs
application/src/playground/: builder.rs  mod.rs  types.rs
application/src/services/: mod.rs  prediction_service.rs  training_service.rs
application/tests/: mnist_test.rs  xor_test.rs
core/: Cargo.toml
core/src/: activation.rs  activation_layer.rs  layer.rs  lib.rs  loss.rs  module.rs  sequential.rs
docker/: docker-compose.prod.yml  docker-compose.yml  loki-config.yml  vector.toml
docker/grafana-provisioning/datasources/: datasources.yml
docker/grafana/datasources/: datasources.yml
docs/: CLEAN_ARCHITECTURE.md  MNIST_PAINTER_ARCHITECTURE.md  PERFORMANCE_OPTIMIZATION.md  PLAYGROUND_ARCHITECTURE.md  REFACTORING_SUMMARY.md  RUNNING_MNIST_TESTS.md
docs/user-stories/: cross-entropy-implementation.md  feed-forward neural network foundation.md  interactive-pixel-painter.md  neural network visualization dashboard.md  neural_network_playground.md  softmax-implementation.md  stuctured console observability.md
infrastructure/: Cargo.toml
infrastructure/examples/: mnist_painter.rs
infrastructure/src/: lib.rs
infrastructure/src/observability/: logging.rs
infrastructure/src/painter/: app.rs  canvas.rs  message.rs  mod.rs
presentation/: Cargo.toml
presentation/examples/: mnist_painter.rs  mnist_painter_fast.rs  playground.rs  playground_mnist.rs
presentation/src/: lib.rs  main.rs  theme.rs
presentation/src/painter/: app.rs  canvas.rs  message.rs  mod.rs
scripts/: README.md  bench.sh  build.sh  check.sh  ci.sh  clippy.sh  coverage.sh  db-reset.sh  docker-down.sh  docker-logs.sh  docker-up.sh  fmt.sh  test.sh
viz_dashboard/: Cargo.toml
viz_dashboard/src/: main.rs
