[workspace]
resolver = "2"
members = [
    "core",
    "application",
    "infrastructure",
    "presentation",
]

[workspace.dependencies]
ndarray = "0.16"
ndarray-rand = "0.15"
rand = "0.8"
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }
async-trait = "0.1"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
