[package]
name = "nn-application"
version = "0.1.0"
edition = "2021"

[dependencies]
nn-core = { path = "../core" }
anyhow = { workspace = true }
tracing = { workspace = true }
ndarray = { workspace = true }
mnist = { version = "0.5", features = ["download"] }
serde = { workspace = true }

[lints]
workspace = true
