[package]
name = "nn-infrastructure"
version = "0.1.0"
edition = "2021"

[dependencies]
nn-core = { path = "../core" }
nn-application = { path = "../application" }
ndarray = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
iced = { version = "0.13", features = ["canvas", "tokio"] }

[[example]]
name = "mnist_painter"
path = "examples/mnist_painter.rs"

[lints]
workspace = true
