[package]
name = "nn-presentation"
version = "0.1.0"
edition = "2021"

[dependencies]
nn-application = { path = "../application" }
nn-infrastructure = { path = "../infrastructure" }
nn-core = { path = "../core" }
iced = { version = "0.13", features = ["canvas", "tokio"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ndarray = { workspace = true }
rand = { workspace = true }


[lints]
workspace = true
