[package]
name = "viz-dashboard"
version = "0.1.0"
edition = "2021"

[dependencies]
nn-core = { path = "../core" }
nn-application = { path = "../application" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

[lints]
workspace = true
